--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:name=".AppController"
         android:allowBackup="true"
         android:icon="@drawable/header"
-        android:label="@string/app_name"
+        android:label="@string/app_name_action_bar"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
 
