--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,8 @@
         android:label="@string/app_name_action_bar"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
+        <!--android:label="@string/app_name"-->
+
 
 
         <activity android:name=".Splash"
@@ -41,8 +43,8 @@
             android:parentActivityName=".MainActivity"
           />
         <activity android:name=".Home"
-
-
+            android:screenOrientation="portrait"
+            android:label="@string/app_name_action_bar"
             android:theme="@style/AppTheme.NoActionBar">
 
         </activity>
@@ -82,6 +84,7 @@
         <activity android:name=".ReportSingle"
             android:parentActivityName=".SingleIndustry"/>
         <activity android:name=".Email"
+            android:noHistory="true"
             android:parentActivityName=".Connect"/>
     </application>
 
