--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="mushirih.thoughtleadership2" >
+    package="mushirih.thoughtleadership2"
+    >
     <uses-permission android:name="android.permission.READ_CALENDAR"/>
     <uses-permission android:name="android.permission.WRITE_CALENDAR"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
@@ -15,13 +16,18 @@
 
         android:name=".AppController"
         android:allowBackup="true"
-        android:icon="@drawable/header"
-        android:label="@string/app_name_action_bar"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
         <!--android:label="@string/app_name"-->
 
-
+        <service android:name=".data.updateDataBG"/>
+        <receiver android:name=".data.DataListener">
+            <intent-filter >
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE"/>
+            </intent-filter>
+        </receiver>
 
         <activity android:name=".Splash"
             android:theme="@style/AppTheme.NoActionBar">
