--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     compile 'com.android.support:design:23.1.1'
     compile 'com.android.support:cardview-v7:23.1.1'
     compile files('libs/gson-2.2.4.jar')
+    compile 'com.android.support:palette-v7:22.2.+'
 }
