--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
         </receiver>
 
         <activity android:name=".Splash"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -39,6 +40,7 @@
             </intent-filter>
         </activity>
         <activity
+            android:screenOrientation="portrait"
             android:name=".MainActivity"
             android:parentActivityName=".Home"
             >
@@ -47,6 +49,7 @@
 
         </activity>
         <activity
+            android:screenOrientation="portrait"
             android:name=".Report"
             android:parentActivityName=".MainActivity"
           />
@@ -57,6 +60,7 @@
 
         </activity>
         <activity android:name=".Interest"
+            android:screenOrientation="portrait"
             android:parentActivityName=".Home">
             <intent-filer>
                 <action android:name=".Interest" />
@@ -64,16 +68,22 @@
             </intent-filer>
         </activity>
         <activity android:name=".ListCred"
+            android:screenOrientation="portrait"
             android:parentActivityName=".Home"/>
         <activity android:name=".DIR"
+            android:screenOrientation="portrait"
             android:parentActivityName=".Home"/>
         <activity android:name=".About"
+            android:screenOrientation="portrait"
             android:parentActivityName=".Home"/>
         <activity android:name=".Connect"
+            android:screenOrientation="portrait"
             android:parentActivityName=".Home"/>
         <activity android:name=".Services"
+            android:screenOrientation="portrait"
             android:parentActivityName=".Home"/>
         <activity android:name=".Industries"
+
             android:screenOrientation="portrait"
             android:parentActivityName=".Home"
             android:theme="@style/AppTheme"/>
@@ -84,25 +94,32 @@
             <!-->-->
         <activity
             android:name=".Cred2"
+            android:screenOrientation="portrait"
             android:parentActivityName=".ListCred"
             android:theme="@style/AppTheme"
             >
          </activity>
         <activity android:name=".Events"
+
             android:screenOrientation="portrait"
             android:parentActivityName=".Home"
             android:theme="@style/AppTheme"/>
         <activity android:name=".SingleIndustry"
+            android:screenOrientation="portrait"
             android:parentActivityName=".Industries"/>
         <activity android:name=".ReportSingle"
+            android:screenOrientation="portrait"
             android:parentActivityName=".SingleIndustry"/>
         <activity android:name=".Email"
+            android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden|adjustResize"
             android:noHistory="true"
             android:parentActivityName=".Connect"/>
         <activity android:name=".tweets.TwitterMain"
+            android:screenOrientation="portrait"
             android:parentActivityName=".Connect"/>
         <activity android:name=".Bout"
+            android:screenOrientation="portrait"
             android:parentActivityName=".Home"/>
     </application>
 
