--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    compileSdkVersion 26
+    buildToolsVersion "26.0.2"
 
     defaultConfig {
         applicationId "mushirih.thoughtleadership2"
-        minSdkVersion 10
+        minSdkVersion 14
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
@@ -25,10 +25,28 @@ dependencies {
     compile files('libs/YouTubeAndroidPlayerApi.jar')
     compile files('libs/picasso-2.5.2.jar')
     compile 'de.hdodenhof:circleimageview:2.0.0'
-    compile 'com.android.support:appcompat-v7:23.1.1'
-    compile 'com.android.support:recyclerview-v7:23.1.1'
+
     compile 'com.android.support:design:23.1.1'
-    compile 'com.android.support:cardview-v7:23.1.1'
+
     compile files('libs/gson-2.2.4.jar')
     compile 'com.android.support:palette-v7:22.2.+'
+    compile 'com.firebaseui:firebase-ui-database:1.2.0'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.android.support:appcompat-v7:26.1.0'
+    compile 'com.google.firebase:firebase-database:10.2.0'
+    compile 'com.android.support:recyclerview-v7:26.1.0'
+    compile 'com.android.support:cardview-v7:26.+'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'org.jsoup:jsoup:1.10.1'
+    compile 'com.google.firebase:firebase-storage:10.2.0'
+    compile 'com.toe.chowder:chowder:0.8.2'
+
+
+
+
+
 }
+
+
+
+apply plugin: 'com.google.gms.google-services'
