--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,13 +11,13 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+
     <permission android:name="CALL_PHONE"/>
     <application
-
         android:name=".AppController"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
         <!--android:label="@string/app_name"-->
@@ -30,18 +30,27 @@
                 <action android:name="android.net.conn.CONNECTIVITY_CHANGE"/>
             </intent-filter>
         </receiver>
-
+   <activity android:name=".eventsPictorial.MainActivity"
+       >
+       <meta-data
+           android:name="android.support.PARENT_ACTIVITY"
+           android:value=".Home" />
+    </activity>
         <activity android:name=".Splash"
+            android:label="@string/app_name_action_bar"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="adroid.intent.category.LAUNCHER"/>
             </intent-filter>
+
         </activity>
+
         <activity android:name=".Home"
             android:screenOrientation="portrait"
-            android:label="@string/app_name_action_bar"
+
             android:theme="@style/AppTheme.NoActionBar">
 
         </activity>
@@ -50,16 +59,12 @@
             android:name=".MainActivity"
             android:parentActivityName=".Home"
             >
-
-
-
         </activity>
         <activity
             android:screenOrientation="portrait"
             android:name=".Report"
             android:parentActivityName=".MainActivity"
           />
-
         <activity android:name=".Interest"
             android:screenOrientation="portrait"
             android:parentActivityName=".Home">
@@ -122,6 +127,17 @@
         <activity android:name=".Bout"
             android:screenOrientation="portrait"
             android:parentActivityName=".Home"/>
+        <activity
+            android:name=".WebView"
+            android:parentActivityName=".Home"
+            />
+        <activity android:name=".testData.MainActivity"
+            android:parentActivityName=".Home"/>
+        <activity android:name=".intro.WelcomeActivity">
+
+        </activity>
+        <activity android:name=".eventsPictorial.ArticlesActivity"
+            android:parentActivityName=".Home"></activity>
     </application>
 
 </manifest>
